// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todos GraphQL Query & Mutation 1`] = `"removeUser"`;

exports[`Todos GraphQL Query & Mutation 2`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "1",
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 3`] = `"addUser"`;

exports[`Todos GraphQL Query & Mutation 4`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "2",
      "id": "VXNlcjo2Nw==",
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 5`] = `"addTodo 1"`;

exports[`Todos GraphQL Query & Mutation 6`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "3.0",
      "todoEdge": Object {
        "cursor": "MTg4",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxODg=",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 7`] = `"queryUser"`;

exports[`Todos GraphQL Query & Mutation 8`] = `
Object {
  "data": Object {
    "user": Object {
      "completedCount": 0,
      "email": "user@test.com",
      "id": "VXNlcjo2Nw==",
      "todos": Object {
        "edges": null,
        "pageInfo": Object {
          "endCursor": null,
          "hasNextPage": true,
        },
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 9`] = `"markAllTodos true"`;

exports[`Todos GraphQL Query & Mutation 10`] = `
Object {
  "data": Object {
    "markAllTodos": Object {
      "changedTodos": Array [
        Object {
          "complete": true,
          "id": "VG9kbzoxODg=",
          "text": "Get A Customer 1",
        },
      ],
      "clientMutationId": "4",
      "user": Object {
        "completedCount": 1,
        "id": "VXNlcjo2Nw==",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 11`] = `"changeTodoStatus 1 false"`;

exports[`Todos GraphQL Query & Mutation 12`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "5.0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxODE=",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "id": "VXNlcjo2Mg==",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 13`] = `"changeTodoStatus 1 true"`;

exports[`Todos GraphQL Query & Mutation 14`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "6.0",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxODE=",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user@test.com",
        "id": "VXNlcjo2Mg==",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 15`] = `"clearCompletedTodos"`;

exports[`Todos GraphQL Query & Mutation 16`] = `
Object {
  "data": Object {
    "clearCompletedTodos": Object {
      "clientMutationId": "7",
      "deletedTodoIds": Array [
        "VG9kbzoxODE=",
      ],
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjo2Mg==",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 17`] = `"renameTodo 1"`;

exports[`Todos GraphQL Query & Mutation 18`] = `
Object {
  "data": Object {
    "renameTodo": Object {
      "clientMutationId": "9.0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxODE=",
        "text": "",
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 19`] = `"removeTodo 1"`;

exports[`Todos GraphQL Query & Mutation 20`] = `
Object {
  "data": Object {
    "removeTodo": Object {
      "clientMutationId": "10.0",
      "user": Object {
        "completedCount": 0,
        "email": "user@test.com",
        "id": "VXNlcjo2Mg==",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Todos GraphQL Query & Mutation 21`] = `"queryUser"`;

exports[`Todos GraphQL Query & Mutation 22`] = `
Object {
  "data": Object {
    "user": Object {
      "completedCount": 0,
      "email": "user@test.com",
      "id": "VXNlcjo2Mg==",
      "todos": Object {
        "edges": null,
        "pageInfo": Object {
          "endCursor": null,
          "hasNextPage": true,
        },
      },
      "totalCount": 1,
    },
  },
}
`;
